# image_sorter

./: .gitignore  CLAUDE.md  README.md  build-distribution.bat  build-distribution.sh  requirements.md
.diary/: 2025-06-27.md
.memo/: implementation_notes.md  todo_list.md
backend/: __init__.py  app.py  image-sorter-backend.spec  main.py  models.py  pyproject.toml  test_api.py
backend/utils/: __init__.py  encoding.py  file_operations.py
frontend/: DISTRIBUTION.md  STANDALONE-DISTRIBUTION.md  index.html  jest.config.js  package-lock.json  package.json  renderer.js  test-settings.js  tsconfig.json  tsconfig.main.json  webpack.config.js
frontend/scripts/: build-standalone-backend.js  prepare-backend.js
frontend/src/: setupTests.ts  types.ts
frontend/src/constants/: index.ts
frontend/src/hooks/: useImageBatch.ts  useSettings.ts  useSettingsFile.ts
frontend/src/hooks/__tests__/: useImageBatch.test.ts  useSettings.test.ts
frontend/src/main/: main.ts  types.ts
frontend/src/renderer/: index.html  index.tsx  styles.css  types.js
frontend/src/renderer/components/: App.tsx  ClassItem.tsx  ClassManagementTab.tsx  Controls.tsx  DebugPanel.tsx  FolderSelector.tsx  GeneralSettingsTab.tsx  Header.tsx  ImageGrid.tsx  ProgressBar.tsx  QuickInfo.tsx  SettingsModal.tsx
frontend/src/renderer/hooks/: useImageClassification.ts  useImageLoader.ts
frontend/src/services/: api.ts
frontend/src/services/__tests__/: api.test.ts
frontend/src/utils/: errorHandler.ts  fileUtils.ts  pathUtils.ts  settingsFile.ts
frontend/src/utils/__tests__/: fileUtils.test.ts  (+2 more)
(+1 files in other folders)
