[project]
name = "image-sorter-backend"
version = "0.1.0"
description = "FastAPI backend for image sorting application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pillow>=10.1.0",
    "pydantic>=2.5.0",
    "pyinstaller>=6.14.1",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
